--- a/Lab5/Lab5-red wine.ipynb
+++ b/Lab5/Lab5-red wine.ipynb
@@ -1207,7 +1207,7 @@
     }
    ],
    "source": [
-    "grid={\"C\":np.logspace(2,5,10), \"penalty\":[\"l1\",\"l2\"]}# l1 lasso l2 ridge\n",
+    "grid={\"C\":np.logspace(2,5,10), \"penalty\":[\"l1\",\"l2\"]}\n",
     "logreg_cv=GridSearchCV(cls_log,grid,cv=5)\n",
     "logreg_cv.fit(x_train,y_train)"
    ]
@@ -1313,7 +1313,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1372,8 +1374,7 @@
     }
    ],
    "source": [
-    "tuned_parameters = {'C':(10,20,1)}\n",
-    "\n",
+    "tuned_parameters = {'C':[1,10,100,1000],'gamma':[1,0.1,0.001,0.0001], 'kernel':['linear','rbf']}\n",
     "svc_cv=GridSearchCV(cls_svc,tuned_parameters,cv=5)\n",
     "svc_cv.fit(x_train,y_train)"
    ]
@@ -1436,6 +1437,30 @@
     "print(recall_score(y_test, target1_1_bsvc, average='macro'))\n",
     "print('precission')\n",
     "print(precision_score(y_test, target1_1_bsvc, average='weighted'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC(C=10, cache_size=200, class_weight=None, coef0=0.0,\n",
+      " decision_function_shape='ovr', degree=3, gamma=0.1,\n",
+      " kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+      " shrinking=True, tol=0.001, verbose=False)\n",
+      "Accuracy train = 0.969230\n",
+      "Accuracy test = 0.895238\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"SVC(C=10, cache_size=200, class_weight=None, coef0=0.0,\\n decision_function_shape='ovr', degree=3, gamma=0.1,\\n kernel='rbf', max_iter=-1, probability=False, random_state=None,\\n shrinking=True, tol=0.001, verbose=False)\")\n",
+    "print(\"Accuracy train = 0.969230\")\n",
+    "print(\"Accuracy test = 0.895238\")"
    ]
   },
   {
